--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     <script src="js/console.js"></script>
     <script src="js/matrix_glow.js"></script>    
     <script src="js/fade.js"></script>
+    <audio controls autoplay>
+        <source src="mp3/07-Nevergreen.mp3" type="audio/ogg"> 
+    </audio>
 </body>
 
 </html>
