Added loop and autoplay for Emacipator - Nevergreen

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <script src="js/console.js"></script>
     <script src="js/matrix_glow.js"></script>    
     <script src="js/fade.js"></script>
-    <audio controls autoplay>
+    <audio autoplay loop>
         <source src="mp3/07-Nevergreen.mp3" type="audio/ogg"> 
     </audio>
 </body>
